src/test/ui/traits/trait-test.stderr
error[E0404]: expected trait, found builtin type `isize`
  --> $DIR/trait-test.rs:14:6
   |
LL | impl isize for usize { fn foo(&self) {} } //~ ERROR trait
   |      ^^^^^ not a trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0404`.
